src/styles/utils/theme.css
:root {
    color-scheme: light dark;
    accent-color: var(--secondary);

    --gray: light-dark(rgb(142,142,147), rgb(142,142,147));
    --gray-2: light-dark(rgb(174,174,178), rgb(99,99,102));
    --gray-3: light-dark(rgb(199,199,204), rgb(72,72,74));
    --gray-4: light-dark(rgb(209,209,214), rgb(58,58,60));
    --gray-5: light-dark(rgb(229,229,234), rgb(44,44,46));
    --gray-6: light-dark(rgb(242,242,247), rgb(28,28,30));

    --primary: var(--color-blue);
    --secondary: var(--color-pink);

    --white: rgb(255,255,255);
    --black: rgb(0,0,0);

    --bg-primary: light-dark(var(--gray-6), var(--black));
    --bg-accent: var(--gray-5);

    --fg-primary: light-dark(rgb(44,44,46), rgb(242,242,247));
    --fg-accent: var(--gray);

    --bg-tooltip: light-dark(var(--white), var(--black));
    --bg-card: light-dark(var(--white), var(--gray-6));
    --bg-form: light-dark(var(--gray-6), var(--gray-4));
    --bg-popover: light-dark(var(--white), var(--gray-6));

    --bg-picker: var(--gray-6);

    --highlight: color-mix(in srgb, var(--primary) 30%, transparent);

    --glass-alpha: 0.5;
    --bg-glass: light-dark(rgba(242, 242, 247, var(--glass-alpha)), rgba(0, 0, 0, var(--glass-alpha)));
    --card-highlight: color-mix(in srgb, var(--bg-card) 50%, transparent);

    --bg-backdrop: light-dark(
        color-mix(in srgb, var(--gray-4) 10%, transparent),
        color-mix(in srgb, var(--gray-2) 25%, transparent)
    );
    /* --bg-backdrop: var(--gray-4); */
    /* --bg-backdrop: color-mix(in srgb, var(--gray-4) 20%, transparent); */

    --bg-loading: light-dark(var(--white), var(--gray-6));
    --bg-wave: light-dark(var(--gray-6), var(--gray-5));

    --page-x: 150px;
    --modal-scale: .88;
    --easing-x: var(--ease-2);

    @media (prefers-reduced-transparency: reduce) {
        --glass-alpha: 1;
    }

    /* color: #e5e5ea; */

    --glass: light-dark(var(--white), var(--gray-4));
    --solid-bg: light-dark(var(--white), var(--black));
    --glass-bg: color-mix(in srgb, var(--glass) 50%, transparent);
    --glass-filter: blur(50px) brightness(.9);
    --glass-border: light-dark(var(--white), var(--gray-3));

    --bg-primary: light-dark(var(--gray-5), var(--black));
    --bg-card: color-mix(in srgb, light-dark(var(--white), var(--gray-4)) 50%, transparent);
    --card-filter: blur(80px) brightness(1);
    --card-border: light-dark(var(--white), var(--gray-5));

    --list-border: light-dark(var(--gray-5), rgb(38,38,40));

    --bg-glass: color-mix(in srgb, var(--bg-primary) 50%, transparent);
}

/* :root {
    --ease-1: cubic-bezier(.25,0,.5,1);
    --ease-2: cubic-bezier(.25,0,.4,1);
    --ease-3: cubic-bezier(.25,0,.3,1);
    --ease-4: cubic-bezier(.25,0,.2,1);
    --ease-5: cubic-bezier(.25,0,.1,1);
    --ease-in-1: cubic-bezier(.25,0,1,1);
    --ease-in-2: cubic-bezier(.50,0,1,1);
    --ease-in-3: cubic-bezier(.70,0,1,1);
    --ease-in-4: cubic-bezier(.90,0,1,1);
    --ease-in-5: cubic-bezier(1,0,1,1);
    --ease-out-1: cubic-bezier(0,0,.75,1);
    --ease-out-2: cubic-bezier(0,0,.50,1);
    --ease-out-3: cubic-bezier(0,0,.3,1);
    --ease-out-4: cubic-bezier(0,0,.1,1);
    --ease-out-5: cubic-bezier(0,0,0,1);
} */

